[add] styling pass for all pages

--- a/src/app/components/add-game/add-game.component.html
+++ b/src/app/components/add-game/add-game.component.html
@@ -19,6 +19,6 @@
 
     </mat-form-field>
 
-    <button (click)="addGameToUser()" class="custom-button">{{'game.addModal.addGame' | translate}}</button>
+    <button mat-raised-button (click)="addGameToUser()">{{'game.addModal.addGame' | translate}}</button>
 
 </mat-dialog-content>
