--- a/src/app/components/review/review/review.component.html
+++ b/src/app/components/review/review/review.component.html
@@ -1,11 +1,9 @@
 <mat-card class="mat-card">
 
 
-
     <div class="card"></div>
 
     <div class="user-info">
-
 
         <p>{{'review.by' | translate}}: {{review.username}}</p>
         <p>{{'review.postedDate' | translate}}: {{ review.postedDate| date: 'dd MMM yyyy h:mm:ss a'}}</p>
@@ -19,18 +17,18 @@
     <div class="review-body">
 
         <form (ngSubmit)="saveReview()">
-            <input class="description-input" [formControl]="reviewForm.controls.description" type="text"
-                id="description">
+            <textarea class="description-input" [formControl]="reviewForm.controls.description" type="text"
+                id="description"> </textarea>
         </form>
 
 
     </div>
 
     <div class="buttons">
-        @if(review.userId === userId){ <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit"
-            fontIcon="save" class="save-button" (click)="saveReview()"></mat-icon>}
         @if(review.userId === userId || isAdmin){ <mat-icon class="navbar-icon-right" aria-hidden="false"
             aria-label="exit" fontIcon="delete" class="delete-button" (click)="openDeleteDialog()"></mat-icon>}
+        @if(review.userId === userId){ <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit"
+            fontIcon="save" class="save-button" (click)="saveReview()"></mat-icon>}
     </div>
 
 
