--- a/src/app/pages/game-detail/game-detail.component.css
+++ b/src/app/pages/game-detail/game-detail.component.css
@@ -71,3 +71,14 @@ form {
     border-radius: 8px;
     resize: vertical;
 }
+
+.review-textarea {
+    resize: none;
+    height: 100px;
+    width: auto;
+}
+
+.close-button {
+    margin-left: 0px;
+    margin-right: auto;
+}
