--- a/src/app/pages/change-password/change-password.component.css
+++ b/src/app/pages/change-password/change-password.component.css
@@ -1,7 +1,6 @@
 .form-container {
     display: flex;
     flex-direction: column;
-    width: 300px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -14,17 +13,10 @@
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    width: auto;
 }
 
-.submit-button {
-    width: 100px;
-    padding: 8px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+
 
 .form-field {
     width: 100%;
@@ -33,4 +25,10 @@
 
 .form-input {
     width: 100%;
+    height: 50pxx;
+}
+
+
+.input {
+    width: 50px;
 }
