--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -10,19 +10,15 @@
             }
             <p>{{'changePassword.oldPassword' | translate}} </p>
 
-            <mat-form-field>
-                <input matInput [formControl]="changePasswordForm.controls.oldPassword"
-                    placeholder="{{'changePassword.oldPassword' | translate}}">
-            </mat-form-field>
+            <input type="password" [formControl]="changePasswordForm.controls.oldPassword"
+                placeholder="{{'changePassword.oldPassword' | translate}}">
 
             @if(isNewPasswordPresent){
             <mat-error>{{'changePassword.noNewPassword' | translate}}</mat-error>
             }
             <p> {{'changePassword.newPassword' | translate}} </p>
-            <mat-form-field>
-                <input matInput [formControl]="changePasswordForm.controls.newPassword"
-                    placeholder="{{'changePassword.newPassword' | translate}}">
-            </mat-form-field>
+            <input type="password" [formControl]="changePasswordForm.controls.newPassword"
+                placeholder="{{'changePassword.newPassword' | translate}}">
 
             @if(isNewPasswordConfirmationPresent){
             <mat-error>{{'changePassword.noNewPasswordConfirmation' | translate}}</mat-error>
@@ -32,25 +28,23 @@
             <mat-error>{{'changePassword.newPasswordMismatch' | translate}}</mat-error>
             }
             <p> {{'changePassword.newPasswordConfirmation' | translate}} </p>
-            <mat-form-field class="form-field">
-                <input matInput [formControl]="changePasswordForm.controls.newPasswordConfirmation"
-                    placeholder="{{'changePassword.newPasswordConfirmation' | translate}}" class="form-input">
-            </mat-form-field>
+            <input class="input" type="password" [formControl]="changePasswordForm.controls.newPasswordConfirmation"
+                placeholder="{{'changePassword.newPasswordConfirmation' | translate}}" class="form-input">
 
             @if (changeError) {
             <mat-error>{{'changePassword.error' | translate}}</mat-error>
             }
 
 
-            <button [disabled]="isSaving" class="submit-button" mat-button type="submit" (click)="ChangePassword()"
-                class="submit-button">{{'changePassword.buttonText' | translate}}
-            </button>
-            @if(isSaving){
-            <mat-spinner class="mat-spinner"> </mat-spinner>
-            }
+
         </form>
 
-
+        <button [disabled]="isSaving" class="submit-button" mat-raised-button type="submit" (click)="ChangePassword()"
+            class="submit-button">{{'changePassword.buttonText' | translate}}
+        </button>
+        @if(isSaving){
+        <mat-spinner class="mat-spinner"> </mat-spinner>
+        }
     </mat-card>
 
 
