--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -1,15 +1,22 @@
 .game-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+
+}
+
+.library-bar {
     display: flex;
-    flex-basis: 25%;
-    flex-wrap: wrap;
+    align-items: center;
+    gap: 10px;
 }
 
 .game-card {
     max-width: 500px;
-    margin: 10px;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
+    /* margin: 10px; */
+    /* padding: 16px; */
+    /* display: flex; */
+    /* flex-direction: column; */
 }
 
 .card-content {
