[add] game ref and styling pass

--- a/src/app/pages/game-detail/game-detail.component.css
+++ b/src/app/pages/game-detail/game-detail.component.css
@@ -82,3 +82,9 @@ form {
     margin-left: 0px;
     margin-right: auto;
 }
+
+.game-image {
+    width: 500px;
+    height: 400px;
+    object-fit: contain;
+}
