--- a/src/app/pages/game-detail/game-detail.component.html
+++ b/src/app/pages/game-detail/game-detail.component.html
@@ -3,7 +3,7 @@
 <div class="game-info-container">
 
     <div class="game-logo">
-        <img mat-card-image class="game-image" src="assets/img/wip.jpg" alt="">
+        <img mat-card-image class="game-image" [src]="game.imageRef" alt="">
     </div>
 
     <div class="game-details">
