--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -27,7 +27,7 @@
 .game-image {
     width: 150px;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
     margin-right: 16px;
 }
