--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -29,7 +29,7 @@
 
             }
 
-            <button mat-button type="submit" class="submit-button">{{'login.login' | translate}}
+            <button mat-button type="submit" class="submit-button" data-cy="submit">{{'login.login' | translate}}
             </button>
             @if(isLoggingIn){
             <mat-spinner class="mat-spinner"> </mat-spinner>
